2003-02-02  Jesper Harder  <harder@ifa.au.dk>

	* gnus-util.el (gnus-kill-buffer): Use get-buffer.

2003-02-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-draft.el (gnus-group-send-queue): Bind gnus-posting-styles
	to nil.

	* nnmail.el: Removed gnus-util autoload.

	* gnus.el: Use gnus-prin1-to-string throughout.

	* gnus-util.el (gnus-prin1-to-string): Bind print-length and
	print-level. 

	* gnus-art.el (article-display-x-face): Removed grey x-face stuff.
	(gnus-treat-display-grey-xface): Removed.

	* gnus-fun.el (gnus-grab-cam-face): New.
	(gnus-convert-image-to-gray-x-face): Removed.
	(gnus-convert-gray-x-face-to-xpm): removed.
	(gnus-convert-gray-x-face-region): Removed.
	(gnus-grab-gray-x-face): Removed.

	* nnmail.el (nnmail-expiry-wait-function): Doc indent.

2003-01-31  Jesper Harder  <harder@ifa.au.dk>

	* gnus-util.el (gnus-kill-buffer): Functions in gnus-util
	shouldn't depend on the rest of Gnus, so test if gnus-buffers is
	bound.

	* nnmail.el (nnmail-cache-close): Use gnus-kill-buffer.

2003-01-30  Jesper Harder  <harder@ifa.au.dk>

	* gnus-cite.el (gnus-cite-reply-regexp, gnus-cite-always-check):
	Remove -- these are bogus options which are never used.

2003-01-29  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-article-mode): Use summary tool bar.

2003-01-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-blackholes) 
	(spam-blackhole-good-server-regex): new variable to skip some IPs
	when checking blackholes; use it
	(spam-check-bogofilter-headers) 
	(spam-bogofilter-bogosity-positive-spam-header): new variable, in
	case more X-Bogosity is used than just "Yes/No"
	(spam-ham-move-routine): semi-fixed, only first article is
	properly moved now

2003-01-27  Jesper Harder  <harder@ifa.au.dk>

	* gnus-util.el (gnus-kill-buffer): Remove buffer from gnus-buffers
	as well.
	
	* gnus-sum.el (gnus-select-newsgroup): Use gnus-kill-buffer.
	
	* gnus-score.el (gnus-score-headers, gnus-score-find-bnews): do.
	