@@ -1,3 +1,8 @@
+2003-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* nnheader.el (nnheader-directory-separator-character): Change the
+	way to compute the dafault value.
+
 2003-02-02  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus-util.el (gnus-kill-buffer): Use get-buffer.
